[package]
name = "sticker-bot"
version = "0.1.0"
authors = ["Marat Safin <jeizsm@gmail.com>"]

[dependencies]
tokio-core = "0.1"
futures = "0.1"
telebot = { git = "https://github.com/jeizsm/telebot.git" }
magick_rust = "0.8"
failure = "0.1"
hyper = "0.11"
hyper-rustls = "0.12"
lazy_static = "1.0"
sled = { git = "https://github.com/jeizsm/sled.git" }
bincode = "1.0"
serde = "1.0"
serde_derive = "1.0"
envy = "0.3"
log = "0.4"
env_logger = "0.5"
byteorder = "1.2"
